--- a/android-app/manifest.json
+++ b/android-app/manifest.json
@@ -9,14 +9,14 @@
   "theme_color": "#2d6a4f",
   "icons": [
     {
-      "src": "/static/img1.jpg",
+      "src": "/static/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     },
     {
-      "src": "/static/img1.jpg",
+      "src": "/static/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
 }
